tests/baselines/reference/controlFlowIterationErrors.errors.txt
tests/cases/conformance/controlFlow/controlFlowIterationErrors.ts(11,17): error TS2345: Argument of type '文字 | 数字' is not assignable to parameter of type '文字'.
  Type '数字' is not assignable to type '文字'.
tests/cases/conformance/controlFlow/controlFlowIterationErrors.ts(22,17): error TS2345: Argument of type '文字 | 数字' is not assignable to parameter of type '文字'.
  Type '数字' is not assignable to type '文字'.
tests/cases/conformance/controlFlow/controlFlowIterationErrors.ts(34,17): error TS2345: Argument of type '文字 | 数字' is not assignable to parameter of type '数字'.
  Type '文字' is not assignable to type '数字'.
tests/cases/conformance/controlFlow/controlFlowIterationErrors.ts(45,17): error TS2345: Argument of type '文字 | 数字' is not assignable to parameter of type '数字'.
  Type '文字' is not assignable to type '数字'.


==== tests/cases/conformance/controlFlow/controlFlowIterationErrors.ts (4 errors) ====
    let cond: boolean;
    
    function len(s: string) {
        return s.length;
    }
    
    function f1() {
        let x: string | number | boolean;
        x = "";
        while (cond) {
            x = len(x);
                    ~
!!! error TS2345: Argument of type '文字 | 数字' is not assignable to parameter of type '文字'.
!!! error TS2345:   Type '数字' is not assignable to type '文字'.
            x;
        }
        x;
    }
    
    function f2() {
        let x: string | number | boolean;
        x = "";
        while (cond) {
            x;
            x = len(x);
                    ~
!!! error TS2345: Argument of type '文字 | 数字' is not assignable to parameter of type '文字'.
!!! error TS2345:   Type '数字' is not assignable to type '文字'.
        }
        x;
    }
    
    declare function foo(x: string): number;
    declare function foo(x: number): string;
    
    function g1() {
        let x: string | number | boolean;
        x = "";
        while (cond) {
            x = foo(x);
                    ~
!!! error TS2345: Argument of type '文字 | 数字' is not assignable to parameter of type '数字'.
!!! error TS2345:   Type '文字' is not assignable to type '数字'.
            x;
        }
        x;
    }
    
    function g2() {
        let x: string | number | boolean;
        x = "";
        while (cond) {
            x;
            x = foo(x);
                    ~
!!! error TS2345: Argument of type '文字 | 数字' is not assignable to parameter of type '数字'.
!!! error TS2345:   Type '文字' is not assignable to type '数字'.
        }
        x;
    }
    
    function asNumber(x: string | number): number {
        return +x;
    }
    
    function h1() {
        let x: string | number | boolean;
        x = "0";
        while (cond) {
            x = +x + 1;
            x;
        }
    }
    
    function h2() {
        let x: string | number | boolean;
        x = "0";
        while (cond) {
            x = asNumber(x) + 1;
            x;
        }
    }
    
    function h3() {
        let x: string | number | boolean;
        x = "0";
        while (cond) {
            let y = asNumber(x);
            x = y + 1;
            x;
        }
    }
    
    function h4() {
        let x: string | number | boolean;
        x = "0";
        while (cond) {
            x;
            let y = asNumber(x);
            x = y + 1;
            x;
        }
    }
    